# jamhacks10

./: .gitignore  package-lock.json  package.json
backend/: .gitignore  circuit.kicad_sch  digikey_refresh_cache.json  digikey_token_cache.json  hex_mic_array_generator.py  main.py  pcb_generator.py  pyproject.toml  requirements.txt  schematic_generator.py  schematic_geometry_generator.py  test_netlist.json
backend/ai_vision/: cv_layer.py  run_test.py
backend/prompts/: CubeMXPrompt.txt  FusionPrompt.txt
backend/services/: component_finder.py  digikey_token.json  ioc_parser.py  oauth3legtest.py  test1.py
backend/uploads/1b0f6f3e-de7d-40a6-aa33-68dd143c3e0e/: cwsf-first.ioc
backend/uploads/4911c045-5aed-4cd0-9dd2-ce3e68ce4edd/: mics-setup.ioc
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AnimatedNoise.tsx  CircuitText.tsx  Dashboard.tsx  DiagnosticsPanel.tsx  OutputTabs.tsx  ScrambleText.tsx  SmoothScroll.tsx  UploadPanel.tsx
frontend/src/hooks/: useReconciliation.ts
