[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "uvicorn>=0.49.0",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "google-genai>=2.8.0",
]

